               ‘list’ containing only ‘RLum’ objects. Depending on the
               ‘RLum’ objects in the list the corresponding ‘get_RLum’
               methods are called.

         • ‘merge_RLum’

             • Method for ‘RLum.Results’ objects now combines the
               data.frame using the function ‘data.table::rbindList’
               this should give a little bit more speed.

         • ‘Risoe.BINfileData-class’

             • Show method now returns the valid grain range,

             • the method ‘get_Risoe.BINfileData’ was never active, but
               the corresponding message on using the function
               ‘Risoe.BINfileData2RLum.Analysis()’ disappeared if a
               user tried to pass additional (unused) arguments.
               Corrected (thanks to Alice Versendaal).

         • RLum.Data.Curve

             • The corresponding ‘set_RLum’ method of this class now
               comes with default values, corresponding to the
               prototype of this class and the method itself does not
               check any longer for missing values, means, empty
               objects can be produced,

             • furthermore the ‘set_RLum’ method now accepts an
               ‘RLum.Data.Curve’ object as input for the argument
               ‘data’. With this the object can be changed (e.g.
               recordType) without de-constructing the object.

  New functions:

         • ‘calc_gSGC()’ Calculate De value based on the gSGC by Li et
           al., 2015,

         • ‘plot_NRt()’ Creates a Natural/Regenerated signal vs. time
           (NR(t)) plot as shown in Steffen et al. 2009,

         • ‘read_Daybreak2R()’ Imports ASCII data produced by a
           Daybreak TL/OSL reader,

         • ‘use_DRAC()’ Provides an R interface to the 'Dose Rate
           Calculator' (DRAC),

         • ‘template_DRAC()’ Creates a DRAC input template (v1.1) to be
           used for ‘use_DRAC()’,
