@@ -30,7 +30,6 @@ Contact: Package Developer Team <team@r-luminescence.de>
 License: GPL-3
 Depends:
     R (>= 3.2.0),
-    Rcpp (>= 0.12.1),
     utils
 LinkingTo: Rcpp,
     RcppArmadillo (>= 0.6.100.0.0)
@@ -41,6 +40,7 @@ Imports:
     httr (>= 1.0.0),
     matrixStats (>= 0.14.2),
     methods,
+    Rcpp (>= 0.12.1),
     minpack.lm (>= 1.1-8),
     raster (>= 2.4-15),
     readxl (>= 0.1.0),
