@@ -1,12 +1,12 @@
 % latex table generated in R 3.2.2 by xtable 1.7-4 package
-% Sat Oct 10 20:01:29 2015
+% Sat Oct 10 21:35:29 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
   \hline
  & Name & Title & Description & Version & m.Date & m.Time & Author \\ 
   \hline
-1 & analyse\_IRSAR.RF & Analyse IRSAR RF measurements & $<$br /$>$ Function to analyse IRSAR RF measurements on K-feldspar samples, performed$<$br /$>$ using the protocol according to Erfurt et al. (2003) and beyond.$<$br /$>$ & 0.5.0 & 2015-10-10 & 19:53:54
+1 & analyse\_IRSAR.RF & Analyse IRSAR RF measurements & $<$br /$>$ Function to analyse IRSAR RF measurements on K-feldspar samples, performed$<$br /$>$ using the protocol according to Erfurt et al. (2003) and beyond.$<$br /$>$ & 0.5.0 & 2015-10-10 & 21:22:01
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   2 & analyse\_pIRIRSequence & Analyse post-IR IRSL sequences & $<$br /$>$ The function performs an analysis of post-IR IRSL sequences including curve$<$br /$>$ fitting on  RLum.Analysis  objects.$<$br /$>$ & 0.1.4 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
